--- a/index.html
+++ b/index.html
@@ -117,34 +117,34 @@
         </div>
         <span class="scrollTriggerHeroContent"></span>
     </nav>
-    <!-- side navigation
-        <div class='navBtn d-flex justify-content-center align-items-center' title='Menu'>
-            <i class="fa fa-bars open" aria-hidden="true"></i>
+    <!-- side navigation -->
+    <div class='navBtn d-flex justify-content-center align-items-center' title='Menu'>
+        <i class="fa fa-bars open" aria-hidden="true"></i>
+    </div>
+    <div id="navigationWrap">
+        <div class="close d-flex justify-content-center align-items-center" title='Close'>
+            <i class="fa fa-times" aria-hidden="true"></i>
         </div>
-        <div id="navigationWrap">
-            <div class="close d-flex justify-content-center align-items-center" title='Close'>
-                <i class="fa fa-times" aria-hidden="true"></i>
+        <div class="d-flex flex-column justify-content-center w-100 h-100">
+            <div class="my-2 menu">
+                <img src="assets/images/logo-white2_1.png" alt="">
             </div>
-            <div class="d-flex flex-column justify-content-center w-100 h-100">
-                <div class="my-2 menu">
-                    <img src="assets/images/logo-white2_1.png" alt="">
-                </div>
-                <nav>
-                    <ul class="fs-nav">
-                        <li class="menu menu-item"><a href="#">Home</a></li>
-                        <li class="menu menu-item"><a href="about.html">Projects</a></li>
-                        <li class="menu menu-item"><a class="introBtn" style="cursor: pointer;">About Us</a></li>
-                        <li class="menu menu-item"><a href="#">Journal</a></li>
-                        <li class="menu menu-item"><a href="#">Contact</a></li>
-                    </ul>
-                </nav>
-                <div class="social menu">
-                    <a href="#"><i class="fab fa-facebook" aria-hidden="true"></i></a>
-                    <a class="ms-2" href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a>
-                    <a class="ms-2" href="#"><i class="fab fa-instagram" aria-hidden="true"></i></a>
-                </div>
+            <nav>
+                <ul class="fs-nav">
+                    <li class="menu menu-item"><a href="#">Home</a></li>
+                    <li class="menu menu-item"><a href="about.html">Projects</a></li>
+                    <li class="menu menu-item"><a class="introBtn" style="cursor: pointer;">About Us</a></li>
+                    <li class="menu menu-item"><a href="#">Journal</a></li>
+                    <li class="menu menu-item"><a href="#">Contact</a></li>
+                </ul>
+            </nav>
+            <div class="social menu">
+                <a href="#"><i class="fab fa-facebook" aria-hidden="true"></i></a>
+                <a class="ms-2" href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a>
+                <a class="ms-2" href="#"><i class="fab fa-instagram" aria-hidden="true"></i></a>
             </div>
-        </div> -->
+        </div>
+    </div>
     <!-- intro div about us -->
     <div class="intro">
         <div class="container">
