--- a/index.html
+++ b/index.html
@@ -118,33 +118,33 @@
         <span class="scrollTriggerHeroContent"></span>
     </nav>
     <!-- side navigation -->
-    <div class='navBtn d-flex justify-content-center align-items-center' title='Menu'>
-        <i class="fa fa-bars open" aria-hidden="true"></i>
-    </div>
-    <div id="navigationWrap">
-        <div class="close d-flex justify-content-center align-items-center" title='Close'>
-            <i class="fa fa-times" aria-hidden="true"></i>
+    <!--  <div class='navBtn d-flex justify-content-center align-items-center' title='Menu'>
+            <i class="fa fa-bars open" aria-hidden="true"></i>
         </div>
-        <div class="d-flex flex-column justify-content-center w-100 h-100">
-            <div class="my-2 menu">
-                <img src="assets/images/logo-white2_1.png" alt="">
+        <div id="navigationWrap">
+            <div class="close d-flex justify-content-center align-items-center" title='Close'>
+                <i class="fa fa-times" aria-hidden="true"></i>
             </div>
-            <nav>
-                <ul class="fs-nav">
-                    <li class="menu menu-item"><a href="#">Home</a></li>
-                    <li class="menu menu-item"><a href="about.html">Projects</a></li>
-                    <li class="menu menu-item"><a class="introBtn" style="cursor: pointer;">About Us</a></li>
-                    <li class="menu menu-item"><a href="#">Journal</a></li>
-                    <li class="menu menu-item"><a href="#">Contact</a></li>
-                </ul>
-            </nav>
-            <div class="social menu">
-                <a href="#"><i class="fab fa-facebook" aria-hidden="true"></i></a>
-                <a class="ms-2" href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a>
-                <a class="ms-2" href="#"><i class="fab fa-instagram" aria-hidden="true"></i></a>
+            <div class="d-flex flex-column justify-content-center w-100 h-100">
+                <div class="my-2 menu">
+                    <img src="assets/images/logo-white2_1.png" alt="">
+                </div>
+                <nav>
+                    <ul class="fs-nav">
+                        <li class="menu menu-item"><a href="#">Home</a></li>
+                        <li class="menu menu-item"><a href="about.html">Projects</a></li>
+                        <li class="menu menu-item"><a class="introBtn" style="cursor: pointer;">About Us</a></li>
+                        <li class="menu menu-item"><a href="#">Journal</a></li>
+                        <li class="menu menu-item"><a href="#">Contact</a></li>
+                    </ul>
+                </nav>
+                <div class="social menu">
+                    <a href="#"><i class="fab fa-facebook" aria-hidden="true"></i></a>
+                    <a class="ms-2" href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a>
+                    <a class="ms-2" href="#"><i class="fab fa-instagram" aria-hidden="true"></i></a>
+                </div>
             </div>
-        </div>
-    </div>
+        </div> -->
     <!-- intro div about us -->
     <div class="intro">
         <div class="container">
@@ -459,78 +459,78 @@
     <section class="caseStudy py-4" style="background-color:#493d78; position: relative;">
         <div class="container">
             <div class="owl-carousel owl-theme owl-2 caseOwl">
-                <div class="item text-center p-2 d-flex justify-content-center align-items-center flex-column">
+                <div class="item text-center p-3 d-flex justify-content-center align-items-center flex-column">
                     <div class="fact">
                         <div>
                             <div class="case_study_card">
                                 <h3>Case Study 1</h3>
                                 <p class="mt-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque harum totam eius nesciunt, voluptatibus molestiae!</p>
-                                <p class="card__apply mt-5">
+                                <p class="card__apply mt-3">
                                     <a class="card__link cstudy" href="#">View More <i class="fas fa-arrow-right"></i></a>
                                 </p>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="item text-center p-2 d-flex justify-content-center align-items-center flex-column">
+                <div class="item text-center p-3 d-flex justify-content-center align-items-center flex-column">
                     <div class="fact">
                         <div>
                             <div class="case_study_card">
                                 <h3>Case Study 2</h3>
                                 <p class="mt-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque harum totam eius nesciunt, voluptatibus molestiae!</p>
-                                <p class="card__apply mt-5">
+                                <p class="card__apply mt-3">
                                     <a class="card__link cstudy" href="#">View More <i class="fas fa-arrow-right"></i></a>
                                 </p>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="item text-center p-2 d-flex justify-content-center align-items-center flex-column">
+                <div class="item text-center p-3 d-flex justify-content-center align-items-center flex-column">
                     <div class="fact">
                         <div>
                             <div class="case_study_card">
                                 <h3>Case Study 2</h3>
                                 <p class="mt-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque harum totam eius nesciunt, voluptatibus molestiae!</p>
-                                <p class="card__apply mt-5">
+                                <p class="card__apply mt-3">
                                     <a class="card__link cstudy" href="#">View More <i class="fas fa-arrow-right"></i></a>
                                 </p>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="item text-center p-2 d-flex justify-content-center align-items-center flex-column">
+                <div class="item text-center p-3 d-flex justify-content-center align-items-center flex-column">
                     <div class="fact">
                         <div>
                             <div class="case_study_card">
                                 <h3>Case Study 4</h3>
                                 <p class="mt-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque harum totam eius nesciunt, voluptatibus molestiae!</p>
-                                <p class="card__apply mt-5">
+                                <p class="card__apply mt-3">
                                     <a class="card__link cstudy" href="#">View More <i class="fas fa-arrow-right"></i></a>
                                 </p>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="item text-center p-2 d-flex justify-content-center align-items-center flex-column">
+                <div class="item text-center p-3 d-flex justify-content-center align-items-center flex-column">
                     <div class="fact">
                         <div>
                             <div class="case_study_card">
                                 <h3>Case Study 5</h3>
                                 <p class="mt-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque harum totam eius nesciunt, voluptatibus molestiae!</p>
-                                <p class="card__apply mt-5">
+                                <p class="card__apply mt-3">
                                     <a class="card__link cstudy" href="#">View More <i class="fas fa-arrow-right"></i></a>
                                 </p>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="item text-center p-2 d-flex justify-content-center align-items-center flex-column">
+                <div class="item text-center p-3 d-flex justify-content-center align-items-center flex-column">
                     <div class="fact">
                         <div>
                             <div class="case_study_card">
                                 <h3>Case Study 6</h3>
                                 <p class="mt-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque harum totam eius nesciunt, voluptatibus molestiae!</p>
-                                <p class="card__apply mt-5">
+                                <p class="card__apply mt-3">
                                     <a class="card__link cstudy" href="#">View More <i class="fas fa-arrow-right"></i></a>
                                 </p>
                             </div>
